fix: resolve infrastructure and configuration issues
- Pin redis image to 7.2-alpine (avoid floating tag)
- Add default values for Postgres env vars (PG_PASS, PG_USER, PG_DB)
- Fix Testcontainers artifactIds: testcontainers-{junit-jupiter,postgresql,kafka} → {junit-jupiter,postgresql,kafka}
- Add explicit testcontainers version 1.20.2 to properties
- Pin Kafka image to 3.8.0 in TestcontainersConfiguration (avoid floating tag)
- Externalize AUTHENTIK_ISSUER_URI with localhost default in application.properties
- Externalize CORS_ALLOWED_ORIGINS with localhost:5173 default in application.properties
- Inject cors.allowed-origins property in SecurityConfig (support multiple origins via comma-separated list)
- Add POM empty overrides for <licenses> and <developers> as documented in HELP.md
- Replace empty .gitignore with standard Java/Spring Boot entries

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>